# ai-assistant

./: .dockerignore  .env.dev  .env.docker  .env.example  .env.firecrawl  .env.minimal  .env.multi-writer.template  .env.template  .env.test  .env.traefik  .gitignore  CHAINLIT_FASTAPI_INTEGRATION.md  CHAINLIT_REMOVAL_SUMMARY.md  DOCKERFILE_EXPERIMENTAL_README.md  Dockerfile  Dockerfile.dev  Dockerfile.experimental  ENV_CLEANUP_SUMMARY.md  EXPERIMENTAL_DOCKER_SUMMARY.md  FIRECRAWL_CONFIG_SUMMARY.md  Makefile  README-CHAINLIT-DATALAYER.md  README-NO-API-KEYS.md  README.md  REORGANIZATION.md  chainlit_app.py  docker-compose.dev.yml  docker-compose.experimental.yml  docker-compose.firecrawl.yml  docker-compose.multi-writer.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  init_firecrawl_db.sql  llm_tool_system_foundation_plan.md  mkdocs.yml  pyproject.toml  pytest.ini  readme.md  requirements.txt  (+14 more)
.github/workflows/: deploy-docs.yml  firecrawl-docker-tests.yml  python-tests.yml
app/: __init__.py  main.py
app/api/: agent_designer_routes.py  agent_routes.py  conversation_routes.py  monitoring_routes.py  multi_writer_routes.py  routes.py  tool_routes.py  ui_routes.py
app/core/: config.py  llm_providers.py  multi_writer_config.py  secure_settings.py  (+1 more)
docker/: .env.dev  .env.example  .env.prod  Makefile  README.md  TOADD.md  dev.env  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  prod.env  run.sh  run_dockers.py  test-builds.sh
docker-configs/: middlewares.yml  traefik.yml
docs/: configuration.md  docker-fixes-guide.md  docker-integration.md  docker-simplified.md  docker-testing.md  dynamic-tool-system.md  index.md  multi-writer-quick-start.md  multi-writer-system.md  next.config.mjs  ollama-integration.md  openai-compatible-provider-refactoring.md  package-lock.json  package.json  playwright-setup.md  quick-start.md  searxng-setup.md  secure-settings-guide.md  theme.config.js  traefik-frontend-integration.md  traefik-setup.md  visual-lmm-system.md
frontend/: MIGRATION_GUIDE.md  README.md  index.html  nginx.conf  package-lock.json  package.json  start-dev.sh  tsconfig.app.json  vite.config.ts
monitoring/: prometheus.yml
notes/: postgrest-healthcheck-issue.md
searxng/: default_settings.yml  limiter.toml  plugins.yml  settings.yml
tests/: README.md  conftest.py  test_docker.py  test_utils.py
utility/: docs.py  firecrawl_health_check.py  fix_localhost_domains.sh  fix_searxng.sh  fix_venv.sh  generate_supabase_keys.py  healthcheck_dev.py  init-mongo.js  startup_dev.py  startup_timer.py  test_app_startup.py  test_chainlit_connection.py  test_code_quality.py  test_docker_services.py  test_firecrawl_connection.py  test_firecrawl_docker.py  test_fixes.py  test_gradio_functionality.py  test_searxng_connection.py  test_traefik_endpoints.sh
(+476 files in other folders)
